--- a/languages/cassette-cmf.pot
+++ b/languages/cassette-cmf.pot
@@ -1,9 +1,9 @@
 # Copyright (C) 2025 PedalCMS
-# This file is distributed under the same license as the WP-CMF package.
+# This file is distributed under the same license as the Cassette-CMF package.
 msgid ""
 msgstr ""
-"Project-Id-Version: WP-CMF 1.0.0\n"
-"Report-Msgid-Bugs-To: https://github.com/PedalCMS/wp-cmf/issues\n"
+"Project-Id-Version: Cassette-CMF 1.0.0\n"
+"Report-Msgid-Bugs-To: https://github.com/PedalCMS/cassette-cmf/issues\n"
 "POT-Creation-Date: 2025-11-12 00:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
